--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: JKAN
+title: DS3
 greeting: Welcome to JKAN
 description: A lightweight, backend-free open data portal, powered by Jekyll.
 baseurl: /jkan
